<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FacturasMedidor" >

    <Button
        android:id="@+id/brnImpFact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ProgressBar"
        android:layout_centerHorizontal="true"
        android:text="@string/imprfactura" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/TxtLectura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ProgressBar"
        android:layout_alignLeft="@+id/txtnumeroMedidor"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/Lectura"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/txtnumeroMedidor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TxtLectura"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/NumeroMedidor"
        android:inputType="text" >

        <requestFocus />
    </EditText>

</RelativeLayout>